# Graphics-SS-Subsurface-Scattering

./: .gitmodules  CMakeLists.txt  RADIANCECASCADES.md  README.md  TODO  clean.sh  cleanstart.sh  cmake_clean.sh  sources.txt  start.sh
resources/models/plant/: indoor_plant_02.mtl  plant_fixed.blend  plant_fixed.mtl
resources/models/scenebox/: scenebox.mtl
resources/shaders/: main.frag  main.vert
resources/shaders/radianceCascades/: cascadeHeader.glsl
resources/shaders/screenPlane/: main.frag  main.vert
src/: inputHandler.cpp  inputHandler.hpp  main.cpp  program.cpp  program.hpp
src/classes/: mesh.hpp  model.hpp  sceneNode.hpp  shader.hpp
src/data/: cube.hpp  plane.hpp
src/radianceCascades/: commonVars.cpp  commonVars.hpp  initialize.cpp  initialize.hpp
src/render/: commonVars.cpp  commonVars.hpp  initialize.cpp  initialize.hpp  render.cpp  render.hpp  renderInit.cpp  renderInit.hpp  update.cpp  update.hpp
src/structs/: mesh.hpp  sceneNode.hpp
src/util/: callbacks.cpp  callbacks.hpp  modelBuffer.cpp  modelBuffer.hpp  shaderHandler.hpp  specs.hpp  textureHandler.cpp  textureHandler.hpp
